refactor : 검색조건 컬렉션타입으로 수정 (중복 검색 가능하도록)